--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,29 @@
-<!-- ========================= manifest.json ========================= -->
-<!--
-SAVE AS: manifest.json (root)
--->
-<script type="application/json" id="manifest.json">
 {
   "name": "QuarterTime",
-  "short_name": "QuarterTime",
-  "start_url": ".",
+  "short_name": "QT",
+  "description": "Планувальник у системі кварталів часу",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0ea5e9",
+  "background_color": "#4f46e5",
+  "theme_color": "#4f46e5",
+  "orientation": "any",
   "icons": [
-    {"src": "icon-192.png", "sizes": "192x192", "type": "image/png"},
-    {"src": "icon-512.png", "sizes": "512x512", "type": "image/png"}
-  ]
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "categories": ["productivity", "utilities"],
+  "lang": "uk",
+  "dir": "ltr",
+  "scope": "/",
+  "prefer_related_applications": false
 }
-</script>
